chore: Rename DeleteResponse to DeleteMerchantAccountResponse
